--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <ul class="custom-constrols">
+    <li><img src="img/foto1-thumb.jpg" alt=""></li>
+    <li><img src="img/foto2-thumb.jpg" alt=""></li>
+    <li><img src="img/foto3-thumb.jpg" alt=""></li>
+    <li><img src="img/foto4-thumb.jpg" alt=""></li>
+    <li><img src="img/foto5-thumb.jpg" alt=""></li>
+    <li><img src="img/foto6-thumb.jpg" alt=""></li>
+  </ul>
   <div class="slide-wrapper">
     <ul class="slide">
       <li><img src="img/imagem1.jpg" alt=""></li>
